gitops/clusters/oci-a1/vote-dev/ingress/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: vote-public
  namespace: istio-system
  annotations:
    argocd.argoproj.io/sync-wave: '10'
spec:
  selector:
    app: istio-ingress
  servers:
  - hosts:
    - ./vote.rvkang.app
    - ./vote-admin.rvkang.app
    port:
      number: 80
      name: http-vote
      protocol: HTTP
    tls:
      httpsRedirect: true
  - hosts:
    - ./vote.rvkang.app
    - ./vote-admin.rvkang.app
    port:
      number: 443
      name: https-vote
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: vote-public-tls
      minProtocolVersion: TLSV1_2
