gitops/clusters/oci-a1/vote-dev/ingress/vote-api.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: vote-api
  namespace: istio-system
  annotations:
    argocd.argoproj.io/sync-wave: '10'
spec:
  hosts:
  - vote-api.rvkang.app
  exportTo:
  - .
  gateways:
  - vote-public
  http:
  - match:
    - port: 443
    route:
    - destination:
        host: vote-server.vote-dev.svc.cluster.local
        port:
          number: 3000
