gitops/clusters/oci-a1/vote-dev/ingress/vote-ui.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: vote-ui
  namespace: istio-system
  annotations:
    argocd.argoproj.io/sync-wave: '10'
spec:
  hosts:
  - vote.rvkang.app
  exportTo:
  - .
  gateways:
  - vote-public
  http:
  - match:
    - port: 443
    route:
    - destination:
        host: vote-ui.vote-dev.svc.cluster.local
        port:
          number: 3001
